Small changes to fix things that were out of place like having section pading be to big on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,6 +214,14 @@ main {
 	max-width: 100%;
 }
 
+@media only screen and (max-width: 768px) {
+
+	section {
+		padding: 1.5em;
+	}
+
+}
+
 
 /* ---------------------- */
 /* Navigation             */
@@ -385,4 +393,8 @@ footer section {
 
 #video iframe {
 	max-width: 100%;
+}
+
+#testis .carousel-inner {
+	min-height: 250px;
 }
